# blockfish

./: .gitignore  Cargo.toml  README.md  blockfish.proto  data-results-notes.txt
block-stacker/: Cargo.toml
block-stacker/src/: lib.rs  random.rs  ruleset.rs  stacker.rs
blockfish-client/: Cargo.toml
blockfish-client-lib/: client.rkt  engine.rkt
blockfish-client-lib/private/: srs.rkt  types.rkt
blockfish-client-lib/private/client/: game-view.rkt  game.rkt  mat.rkt
blockfish-client/src/: controller.rs  controls.rs  main.rs  resources.rs  ruleset.rs  stacker.rs  theme.rs  timer.rs  util.rs  view.rs
blockfish-engine/: Cargo.toml  build.rs
blockfish-engine/src/: ai.rs  common.rs  config.rs  finesse.rs  lib.rs  matrix.rs  place.rs  repl.rs  shape.rs  stacker_util.rs
blockfish-engine/src/ai/: a_star.rs  analysis.rs  b_star.rs  dfs.rs  eval.rs  finesse.rs  histogram.rs  mod.rs  node.rs  place.rs  score.rs  state.rs
blockfish-js/: index.js  package-lock.json  package.json
blockfish-js/src/: ai.js  ipc.js
blockfish-lib/: info.rkt  main.rkt
blockfish-lib/private/: srs.rkt  types.rkt
blockfish-lib/private/brain/: ai.rkt  mat.rkt  norm-shape.rkt  snapshot.rkt
blockfish-lib/private/client/: game-view.rkt  game.rkt  mat.rkt  render.rkt
blockfish-python/: .gitignore  requirements.txt  setup.py
blockfish-python/blockfish/: __init__.py  ai.py  ipc.py
fishtest/cfg/: hello.txt  world.txt
scripts/: build-dpkg.sh  circuit.sh  client.sh  fishtest.py  gen-shtb.sh  race.sh  trace-graphing.rkt
support/: default-controls.json  guideline.json  version
support/test/: srs-shape-table.json
support/themes/: README.md  beta.json  fourlol-dark.json  fourlol-light.json  hell.json  jstris-notlegend-tdesat.json  jstris-notlegend.json  jstris-pastel.json  jstris.json
