[package]
name = "blockfish-client"
version = "0.1.0"
authors = ["iitalics <iitalics@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.34", features = ["ttf"] }
thiserror = "1.0"
log = "0.4.8"
pretty_env_logger = "0.4"
argh = "0.1"
bitflags = "^1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.blockfish]
path = "../blockfish-engine"
features = ["block-stacker"]

[dependencies.block-stacker]
path = "../block-stacker"

[build-dependencies]
fontconfig = "0.2"