[package]
name = "blockfish"
version = "0.1.0"
authors = ["iitalics <iitalics@gmail.com>"]
edition = "2018"

[[bin]]
name = "blockfish-race"
path = "src/bin/race.rs"
required-features = ["race"]

[[bin]]
name = "blockfish-gen-shtb"
path = "src/bin/gen_shtb.rs"
required-features = ["gen-shtb"]

[features]
default = []
slow-tests = []
gen-shtb = ["block-stacker"]
race = ["block-stacker", "argh", "signal-hook"]

[dependencies]
thiserror = "1.0"
log = "0.4.8"
rand = "0.7"
red_union_find = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argh = { version = "0.1", optional = true }
signal-hook = { version = "0.2", optional = true }

[dependencies.block-stacker]
path = "../block-stacker"
optional = true