[package]
name = "blockfish"
version = "0.1.0"
authors = ["iitalics <iitalics@gmail.com>", "mystery <mystery#3553>"]
edition = "2018"

[[bin]]
name = "blockfish-race"
path = "src/bin/race.rs"
required-features = ["race"]

[[bin]]
name = "blockfish-gen-shtb"
path = "src/bin/gen_shtb.rs"
required-features = ["gen-shtb"]

[[bin]]
name = "blockfish"
path = "src/bin/service.rs"
required-features = ["service"]

[features]
default = []
gen-shtb = ["block-stacker"]
protos = ["protobuf", "protoc-rust"]
race = ["block-stacker", "argh", "signal-hook"]
service = ["protos", "pretty_env_logger"]
slow-tests = []

[dependencies]
thiserror = "1.0"
log = "0.4.8"
red_union_find = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argh = { version = "0.1", optional = true }
signal-hook = { version = "0.2", optional = true }
protobuf = { version = "2.20", optional = true }
pretty_env_logger = { version = "0.4", optional = true }

[dependencies.block-stacker]
path = "../block-stacker"
optional = true

[build-dependencies]
protoc-rust = { version = "2.20", optional = true }